# zoom-dl

./: .env.example  .gitignore  CONTRIBUTING.md  HOW-WE-SOLVED-ZOOM-DOWNLOAD.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  zoom_dl.py
src/zoomdl/: __init__.py  batch.py  browser.py  cli.py  config.py  downloader.py  errors.py  http_capture.py  models.py  utils.py
